data/derived/comb/progs/unify/prog7931.ml.out
Characters 29-37:
  let fixpoint (f,b) = wwhile ((helper), b);;
                               ^^^^^^^^
Error: This expression has type ('a -> 'b) * 'a * 'b -> 'b * bool
       but an expression was expected of type
         ('a -> 'b) * 'a * 'b -> (('a -> 'b) * 'a * 'b) * bool
       The type variable 'b occurs inside ('a -> 'b) * 'a * 'b
